--- a/search1/static/css/style.css
+++ b/search1/static/css/style.css
@@ -4,6 +4,10 @@ h1 {
 h2 {
  text-align: center;
 }
+h4 {
+color:red;
+padding: 20 px
+}
 form.login_form {
     margin-left: auto;
     margin-right: auto;
