--- a/mars/static/css/style.css
+++ b/mars/static/css/style.css
@@ -1,15 +1,11 @@
-h1 {
-     text-align: center;
-    }
-h2 {
- text-align: center;
+th, center-text {
+text-align: center;
+vertical-align: middle;
 }
-form.login_form {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 450px;
-    background-color: #ffcc00;
-    border: 1px solid gray;
-    border-radius: 5px;
-    padding: 10px;
+h2 {
+text-align: center;
+}
+
+.cell-1 {
+  vertical-align: middle;
 }
