--- a/mars/templates/jobs.html
+++ b/mars/templates/jobs.html
@@ -3,7 +3,9 @@
 {% block content %}
 
 <h2>Works log</h2>
-
+{% if current_user.is_authenticated %}
+    <a href="add_jobs" class="btn btn-secondary">Добавить работу</a>
+{% endif %}
 {% for item in jobs %}
 <h3>Action # {{item.id}}</h3>
 
@@ -32,10 +34,10 @@
   <tr>
   {% if current_user.is_authenticated and (current_user == item.user  or current_user.id == 1) %}
     <div>
-        <a href="/work/{{ item.id }}" class="btn btn-warning">
+        <a href="/work_edit/{{ item.id }}" class="btn btn-warning">
             Изменить
         </a>
-        <a href="/news_delete/{{ item.id }}" class="btn btn-danger">
+        <a href="/works_delete/{{ item.id }}" class="btn btn-danger">
             Удалить
         </a>
     </div>
