--- a/mars/templates/deportaments.html
+++ b/mars/templates/deportaments.html
@@ -4,7 +4,7 @@
 
 <h2>List of Departments</h2>
 {% if current_user.is_authenticated %}
-    <a href="add_jobs" class="btn btn-secondary">Добавить работу</a>
+    <a href="add_depart" class="btn btn-secondary">Добавить работу</a>
 {% endif %}
 {% for item in jobs %}
 <h3>Action # {{item.id}}</h3>
@@ -28,10 +28,10 @@
   <tr>
   {% if current_user.is_authenticated and (current_user == item.user  or current_user.id == 1) %}
     <div>
-        <a href="/work_edit/{{ item.id }}" class="btn btn-warning">
+        <a href="/depart_edit/{{ item.id }}" class="btn btn-warning">
             Edit
         </a>
-        <a href="/works_delete/{{ item.id }}" class="btn btn-danger">
+        <a href="/depart_delete/{{ item.id }}" class="btn btn-danger">
             Delete
         </a>
     </div>
