сделал REST-API v2.0

--- a/mars/templates/base.html
+++ b/mars/templates/base.html
@@ -16,7 +16,7 @@
 <header>
     <nav class="navbar navbar-light bg-light">
         {% if current_user.is_authenticated %}
-        <a href="depart" class="btn btn-secondary">Depart</a>
+        <a href="jobs" class="btn btn-secondary">Работы</a>
     {% endif %}
 
         <h1 class="muted-text">Миссия Колонизация Марса</h1>
